# osx-sdl3-webgpu

./: CMakeLists.txt  README.md  imgui.ini  main.c  main.cpp  sdl3webgpu.c  sdl3webgpu.h  sdl3webgpu.mm
.github/workflows/: test.yml
apps/basic/: CMakeLists.txt  main.cpp
apps/cube/: CMakeLists.txt  main.cpp
apps/mesh/: CMakeLists.txt  main.cpp
cmake/: eigen.cmake  imgui.cmake  sdl3.cmake  utils.cmake  wgpu.cmake
include/: application.hpp  common.hpp  imgui.hpp  math.hpp  primitive.hpp  read_off.hpp  wgpu.hpp
lib/: sdl3webgpu.mm
src/: main.cpp
tests/: CMakeLists.txt  test_read_off.cpp
